[tool.poetry]
name = "dst_hls"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "dst_hls"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
pdoc3 = "^0.10.0"
geopandas = "^0.12.2"
python-decouple = "^3.6"
flake8 = "^6.0.0"
opencv-python = "^4.7.0.68"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
